# sugar

./: .containers-sugar.yaml  .editorconfig  .env  .env2  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  .sugar.yaml  404.html  Makefile  README.md  index.html  index.md  makim.yaml  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml  test.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yaml  main.yaml  release.yaml
changelog/: changelog.md  index.html
conda/: dev-docker.yaml  dev-podman.yaml  dev.yaml  release.yaml
containers/tests/group1/: compose.yaml
containers_sugar/: __init__.py  __main__.py  cli.py  errors.py  logs.py  sugar.py
contributing/: contributing.md  index.html
docs/: changelog.md  contributing.md  example.ipynb  index.md  installation.md  mkdocs.yaml  podman-ext.md  swarm.md
example/: example.ipynb  index.html
installation/: index.html
podman-ext/: index.html
search/: search_index.json
src/containers_sugar/: __init__.py  logs.py  sugar.py
src/sugar/: __init__.py  __main__.py  cli.py  console.py  core.py  docs.py  healthcheck.py  inspect.py  logs.py  schema.json  sugar.py  utils.py
src/sugar/extensions/: __init__.py  base.py  compose.py  compose_ext.py  podman_compose.py  podman_ext.py  stats.py  swarm.py  tui.py
src/sugar/plugins/: __init__.py  base.py  ext.py  stats.py
src/sugar/tui/: __init__.py  app.py  profile.json
src/sugar/tui/data/: app.json
src/sugar/tui/screens/: __init__.py  details.py  logs.py  profiles.py  services.py
src/sugar/tui/styles/: screens.css  styles.css
swarm/: index.html
tests/: __init__.py  conftest.py  test_containers-sugar.py  test_containers_sugar.py  test_docs.py  test_ext_compose.py  test_ext_compose_ext.py  test_ext_compose_stats.py  test_healthcheck.py  test_podman_ext.py  test_swarm.py  test_swarm_integration.py
tests/containers/: .hooks.sugar.yaml  .multiple-env.sugar.yaml  .services.sugar.yaml  .sugar.yaml
tests/containers/group1/: compose.yaml
tests/containers/group2/: compose.yaml
tests/containers/profile1/: compose.yaml
tests/containers/profile2/: compose.yaml
