[tool.poetry]
name = "containers-sugar"
version = "1.9.1"  # semantic-release
description = "Simplify the usage of containers"
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
license = "BSD 3 Clause"
include = [
  "*.cfg",
  "*.ini",
  "*.js",
  "*.json",
  "*.lock",
  "*.md",
  "*.py",
  "*.sh",
  "*.rst",
  "*.txt",
  "*.toml",
  "*.yml",
  "*.yaml",
  ".github",
  "conda",
  "docker",
  "docs",
  ".dockerignore",
  ".env.tpl",
  ".gitignore",
  "Makefile",
]
exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.scripts]
"containers-sugar" = "containers_sugar.__main__:app"
"sugar" = "containers_sugar.__main__:app"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
Jinja2 = ">=2"
sh = ">=2.0.0"
pyyaml = ">=6"
colorama = ">=0.4.6"
python-dotenv = ">=0.21.1"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3"
mypy = ">=1.6"
ruff = ">=0.1.5"
bandit = ">=1.7.5"
vulture = ">=2.7"
pytest = ">=7"
pytest-cov = ">=3.0.0"
mkdocs = ">=1.2.3,<2"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.20.0"
mkdocs-literate-nav = ">=0.4.1"
mkdocs-macros-plugin = ">=0.6.3"
mkdocs-material = ">=8.2.1"
mkdocstrings = ">=0.17.0"
compose-go = ">=1.23.0"
makim = "1.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
line-length = 79
force-exclude = true
src = ["./containers_sugar", "./tests"]
ignore = ["RUF012"]
exclude = [
  "docs",
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
]
# fixable = ["I001"]
fix = true

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"

[tool.bandit]
exclude_dirs = ["tests"]
targets = "containers_sugar/"

[tool.vulture]
exclude = ["tests"]
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["containers_sugar/"]
sort_by_size = true
verbose = false
