[tool.poetry]
name = "containers-sugar"
version = "1.17.0"  # semantic-release
description = "Simplify the usage of containers"
readme = "README.md"
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
license = "BSD 3 Clause"
packages = [
  {include = "sugar", from="src"},
]
include = [
  "src/sugar/py.typed",
  "src/sugar/schema.json",
]
exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.scripts]
"sugar" = "sugar.__main__:run_app"

[tool.poetry.dependencies]
python = ">=3.9,<4"
Jinja2 = ">=2"
sh = ">=2.0.0"
pyyaml = ">=6"
colorama = ">=0.4.6"
python-dotenv = ">=0.21.1"
typer = ">=0.9.0"
rich = { version = ">=10.11.0", optional = true }
textual = { version = ">=0.48", optional = true }
plotille = { version = ">=5", optional = true }
compose-go = ">=1.27.0"
xonsh = ">=0.15.0"
jsonschema = ">=4"
podman-compose = "^1.3.0"

[tool.poetry.extras]
tui = [
  "plotille",
  "rich",
  "textual",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
pytest-cov = ">=4.1.0"
coverage = ">=7.2.7"
pre-commit = ">=3.3.2"
ruff = ">=0.1.5"
mypy = ">=1.6.0"
bandit = ">=1.7.5"
vulture = ">=2.9.1"
mccabe = ">=0.6.1"
ipykernel = ">=6.0.0"
ipython = ">=7.0.0"
mkdocs = ">=1.4.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.1"
mkdocs-literate-nav = ">=0.6.0"
mkdocs-macros-plugin = ">=0.7.0,<1"
mkdocs-material = ">=9.1.15"
mkdocstrings = {version=">=0.19.0", extras=["python"]}
makim = ">=1.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
exclude = ["scripts/"]

[[tool.mypy.overrides]]
module = [
  "yaml",
]
ignore_missing_imports = true


[tool.ruff]
line-length = 79
force-exclude = true
src = ["./src/sugar", "./tests"]
exclude = [
  "docs",
]
fix = true

[tool.ruff.lint]
ignore = ["RUF012", "PLR0913", "PLR0915"]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"

[tool.bandit]
exclude_dirs = ["tests"]
targets = "src/sugar/"
skips = ["B102", "B701"]

[tool.vulture]
exclude = ["tests", "src/sugar/cli.py"]
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["src/sugar/"]
sort_by_size = true
verbose = false
